# Copyright 2012 Free Software Foundation, Inc.
#
# This file is part of GNU Radio
#
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.

install(FILES
    step_source.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
    ramp_source.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
    Transfer_function_Numerator.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
    Transfer_function_Denominator.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
    Calculation_Calculator.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
    Transfer_function_Response.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
    plot_sink.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
    plzr_plot.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
	Max_val.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
	Calculation_Roots.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
    Transfer_function_Response.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
	Comparator.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)

install(FILES
    Bode.xml
    DESTINATION ${GRC_BLOCKS_DIR}
    COMPONENT "input_python"
)




